--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"description": "memory game",
 	"main": "server.js",
 	"engines": {
-		"node": "12.19.0"
+    "node": "12.19.0",
+    "npm": "6.14.18"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"client": "npm run start --prefix client",
 		"start": "node server.js",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		"heroku-postbuild": "npm install"
 	},
 	"repository": {
 		"type": "git",
