--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "memory game",
 	"main": "server.js",
 	"engines": {
-    "node": "12.19.0",
-    "npm": "6.14.18"
+		"node": "12.19.0"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
