--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"client": "npm run start --prefix client",
 		"start": "node server.js",
-		"heroku-postbuild": "cd ./src && npm run start"
+		"heroku-postbuild": "cd ./src && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
 	},
 	"repository": {
 		"type": "git",
