--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
+		"server": "nodemon server.js",
+		"client": "npm run start --prefix client"
 		"start": "node server.js",
-		"heroku-postbuild": "cd client && npm install && npm run build"
+		"heroku-postbuild": ""NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		},"
 	},
 	"cacheDirectories": [ "node_modules", "client/node_modules" ],
 	"repository": {
