--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"server": "nodemon server.js",
-		"client": "npm run start --prefix client"
+		"client": "npm run start --prefix client",
 		"start": "node server.js",
-		"heroku-postbuild": ""NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-		},"
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"cacheDirectories": [ "node_modules", "client/node_modules" ],
 	"repository": {
